--- a/package.json
+++ b/package.json
@@ -18,12 +18,24 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "mongo": "brew services start mongodb/brew/mongodb-community",
+    "mongo-restart": "brew services restart mongodb/brew/mongodb-community",
+    "mongo-stop": "brew services stop mongodb/brew/mongodb-community",
+    "mongo-port": "sudo lsof -iTCP -sTCP:LISTEN | grep mongo"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.4",
+    "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.1.1",
+    "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
+    "graphql": "^16.9.0",
+    "joi": "^17.13.3",
+    "mongoose": "^8.4.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
