--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
+    "bcrypt": "^5.1.1",
     "graphql": "^16.9.0",
     "joi": "^17.13.3",
     "mongoose": "^8.4.4",
@@ -49,6 +50,7 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@types/bcrypt": "5.0.2",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
