--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "graphql": "^16.9.0",
     "i": "^0.3.7",
     "joi": "^17.13.3",
+    "migrate-mongo": "^11.0.0",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
     "nestjs-pino": "^4.1.0",
     "pino-http": "^10.1.0",
@@ -53,6 +55,7 @@
     "@types/bcrypt": "5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/migrate-mongo": "^10.0.4",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
