--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "i": "^0.3.7",
     "joi": "^17.13.3",
     "migrate-mongo": "^11.0.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
     "nestjs-pino": "^4.1.0",
